# uorm-samples

./: .env  Cargo.toml
resources/: application.yaml
resources/locales/: en.toml  user.xml
resources/mappers/: zh.toml
src/: main.rs  routes.rs
src/business/: mod.rs
src/business/user/: mod.rs
